--- a/styls/body.css
+++ b/styls/body.css
@@ -51,3 +51,44 @@ body {
     margin-top: 10em;
   }
   
+  .intro {
+    text-align: center;
+    width: 80%;
+    padding: 20px;
+    background-color: #f9f9f9c2;
+    margin: auto;
+    margin-top: 1em;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .intro h1 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+  
+  .intro p {
+    font-size: 1.2rem;
+    color: #555;
+  }
+  
+  .testimonials {
+    text-align: center;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 800px;
+    background-color: #f9f9f9c2;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .testimonials h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  
+  .testimonial {
+    margin-bottom: 15px;
+    font-style: italic;
+    color: #555;
+  }
