--- a/styls/item's.css
+++ b/styls/item's.css
@@ -5,7 +5,7 @@
 
 .items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
   gap: 20px;
   width: 100%;
   margin-top: 1em;
@@ -117,4 +117,10 @@
   }
   
   
+}
+
+@media (max-width: 1000px) {
+  .items {
+    grid-template-columns: repeat(2, 1fr); /* 2 קלפים למסכים בינוניים */
+  }
 }
