--- a/styls/product-page's-styl's/product-page's-styl's.css
+++ b/styls/product-page's-styl's/product-page's-styl's.css
@@ -181,23 +181,10 @@ body {
     border-color: #ccc;
   }
 
-  /* Silver */
-#silver:checked ~ .product-gallery {
-    background-color: silver;
-    box-shadow: 0 4px 8px gray;
-}
-
-/* Gold */
-#gold:checked ~ .product-gallery {
-    background-color: gold;
-    box-shadow: 0 4px 8px goldenrod;
-}
-
-/* Red Gold */
-#white-gold:checked ~ .product-gallery {
-    background-color: #ffaeae;
-    box-shadow: 0 4px 8px #cc7a7a;
-}
+  a{
+    text-decoration: none;
+    color: inherit;
+  }
 
 
 @media (max-width: 768px) {
