--- a/styls/shoping-cart.css
+++ b/styls/shoping-cart.css
@@ -139,6 +139,20 @@ body{
     height: 5em;
     z-index: -1;
   }
+
+  a{
+    text-decoration: none;
+    color: inherit;
+    transition: 0.3s;
+  }
+
+  a .cart-item:hover{
+    background-color: rgba(255, 255, 255, 0.867);
+    box-shadow: 0 4px 14px 2px rgb(0 0 0);
+    transition: 0.3s;
+    border-radius: 10px;
+    padding: 1em;
+  }
   
   /* עיצוב רספונסיבי לטלפונים ניידים */
   @media (max-width: 768px) {
