--- a/styls/contact.css
+++ b/styls/contact.css
@@ -18,9 +18,9 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
-    width: 100%; /* וודא שהרוחב הוא 100% */
+    width: 100%; 
     z-index: 1000;
-    margin-bottom: 20px; /* מרווח תחתון להפרדה מהתוכן שמתחת */
+    margin-bottom: 20px; 
   }
   
   .contact-container {
@@ -35,12 +35,12 @@ body {
   }
   
   h1, label, p {
-    color: white; /* צבע הטקסט */
+    color: white; 
     text-shadow: 
       -1px -1px 0 #000,  
        1px -1px 0 #000,
       -1px  1px 0 #000,
-       1px  1px 0 #000; /* מסגרת שחורה */
+       1px  1px 0 #000; 
   }
 
   h1 {
