--- a/styls/item's.css
+++ b/styls/item's.css
@@ -15,7 +15,7 @@
   .item {
     background-color: #fffff37d;
     width: 14em;
-    border: 1px solid #cccccc68; /* מסגרת לפריט */
+    border: 1px solid #cccccc68; 
     border-radius: 10px;
     overflow: hidden;
     padding: 10px;
@@ -47,17 +47,17 @@
   
   .image-slider {
     display: flex;
-    width: 100%; /* מתאים את גודל הסליידר לרוחב המיכל */
-    height: 100%; /* מתאים את גובה הסליידר לגובה המיכל */
-    animation: slide 30s infinite; /* אנימציה לחילופי תמונות */
+    width: 100%; 
+    height: 100%; 
+    animation: slide 30s infinite;
   }
   
   .image-slider img {
-    max-width: 100%; /* מתאים את הרוחב לגודל המיכל */
-    height: auto; /* גובה אוטומטי לשמירת יחס רוחב-גובה */
-    object-fit: contain; /* מתאים את התמונה כך שתהיה ממורכזת */
-    object-position: center; /* ממרכז את התמונה */
-    background-color: white; /* מבטיח שהשוליים יצבעו בלבן */
+    max-width: 100%;
+    height: auto;
+    object-fit: contain; 
+    object-position: center;
+    background-color: white; 
   }
   
   
@@ -105,7 +105,7 @@
   }
   
   .items{
-    margin-bottom: 100px; /* הוסף מרווח בגובה ה-footer */
+    margin-bottom: 100px; 
   }
   
 @media (max-width: 768px) {
@@ -121,6 +121,6 @@
 
 @media (max-width: 1000px) {
   .items {
-    grid-template-columns: repeat(2, 1fr); /* 2 קלפים למסכים בינוניים */
+    grid-template-columns: repeat(2, 1fr); 
   }
 }
