--- a/styls/nav.css
+++ b/styls/nav.css
@@ -62,36 +62,35 @@
   transform: scale(1.2);
 }
 
-/* מגבלת גודל למחשבים */
+
 @media (min-width: 1024px) {
   .nev-bar img {
-    width: 40px; /* גודל קבוע למחשבים */
+    width: 40px; 
     height: 40px;
   }
   
   .nev-bar h1 {
-    font-size: 1rem; /* גודל קבוע לטקסט במחשבים */
+    font-size: 1rem;
   }
 }
 
-/* עיצוב לטאבלטים */
+
 @media (max-width: 1024px) and (min-width: 768px) {
   .nev-bar img {
-    width: 7vw; /* מתאים את הגודל לטאבלטים */
+    width: 7vw; 
   }
 
   .nev-bar h1 {
-    font-size: 1.5vw; /* מתאים את גודל הטקסט לטאבלטים */
+    font-size: 1.5vw;
   }
 }
 
-/* עיצוב לטלפונים */
 @media (max-width: 768px) {
   .nev-bar img {
-    width: 10vw; /* מתאים את הגודל לטלפונים */
+    width: 10vw; 
   }
 
   .nev-bar h1 {
-    font-size: 2.5vw; /* מתאים את גודל הטקסט לטלפונים */
+    font-size: 2.5vw;
   }
 }
