--- a/styls/shoping-cart.css
+++ b/styls/shoping-cart.css
@@ -64,8 +64,8 @@ body{
   }
 
   .cart-item img:hover {
-    transform: scale(1.5); /* מגדיל את התמונה */
-    z-index: 10; /* מבטיח שהתמונה תהיה מעל תמונות אחרות */
+    transform: scale(1.5); 
+    z-index: 10; 
   }
   
   .item-details {
@@ -90,15 +90,15 @@ body{
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    flex-wrap: wrap; /* מוודא גלישה בשורות במסכים קטנים */
+    flex-wrap: wrap; 
   }
   
   .cart-items-summary {
-    flex: 2; /* יותר שטח עבור רשימת הפריטים והסיכום */
+    flex: 2; 
   }
   
   .payment-section {
-    flex: 1; /* פחות שטח עבור פרטי התשלום */
+    flex: 1; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -154,10 +154,10 @@ body{
     padding: 1em;
   }
   
-  /* עיצוב רספונסיבי לטלפונים ניידים */
+ 
   @media (max-width: 768px) {
     .cart-container {
-      flex-direction: column; /* מסדר את האלמנטים אחד מעל השני */
+      flex-direction: column;
     }
 
     .shopping-cart-container{
